fixed issue with horizontal overflow

--- a/src/components/css/Hobbies.css
+++ b/src/components/css/Hobbies.css
@@ -18,17 +18,38 @@
     /* line-height: 0.1em;
     text-align: center;
     border-bottom: 1px solid white; */
+    overflow: hidden;
 }
 
-.hobbies h1 span::after{
+.hobbies h1::before, .hobbies h1::after{
+    background-color: white;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 50%;
+}
+
+.hobbies h1::before {
+    right: 0.5em;
+    margin-left: -50%;
+  }
+  
+.hobbies h1::after {
+    left: 0.5em;
+    margin-right: -50%;
+  }
+
+/* .hobbies h1 span::after{
     content: '';
-    position: absolute;
+    position: fixed;
     height: 5px;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
     top: 0;
     width: 600px;
-}
+} */
 
 .hobbies .hobbiesContainer{
     display: flex;
